# agROBOfood_AUA

./: README.md  usefull_commands.txt
lidar/: CMakeLists.txt  package.xml
lidar/launch/: lidar_description.launch  lidar_sensor.launch  spawn_lidar.launch
lidar/urdf/: lidar.urdf  sick_lms1xx.urdf.xacro
my_husky/: CMakeLists.txt  package.xml
my_husky/config/: test.yaml
my_husky/launch/: corn_amcl.launch  husky_corn_field.launch  husky_empty_world.launch  test.launch  test_amcl.launch
my_husky/maps/: corn_field_barriers_map.yaml
my_husky/src/: simple_planer.cpp
my_husky/urdf/: world.urdf.xacro
robot_simulation/: CMakeLists.txt  package.xml
robot_simulation/launch/: corn_field.launch  custom_world.launch  husky_corn_field.launch  spawn_sirius.launch  world.launch
robot_simulation/launch/world_senarios/: corn_field.launch  gps_test.launch  sirius_corn_field.launch  sirius_empty_world.launch
robot_simulation/models/bush_type1/: model.config  model.sdf
robot_simulation/models/bush_type1/materials/scripts/: bush_type1.material
robot_simulation/models/bush_type1/meshes/: model.dae  model.stl
robot_simulation/models/corn_type1/: model.config  model.sdf
robot_simulation/models/corn_type1/materials/scripts/: corn_type1.material
robot_simulation/models/corn_type2/: model.config  model.sdf
robot_simulation/models/corn_type2/materials/scripts/: corn_type2.material
robot_simulation/models/corn_type2/meshes/: model.dae  model.stl
robot_simulation/models/rock_type1/: model.config  model.sdf
robot_simulation/models/rock_type1/materials/scripts/: corn_type3.material
robot_simulation/models/rock_type1/meshes/: model.stl
robot_simulation/models/rtk/: model.dae
robot_simulation/models/terrain1/meshes/: model.dae
robot_simulation/models/terrain2/: model.config  model.sdf
robot_simulation/models/terrain2/materials/scripts/: corn_stack.material
robot_simulation/models/terrain2/meshes/: model.dae
robot_simulation/models/terrain3/: model.config  model.sdf
robot_simulation/models/terrain3/meshes/: model.dae
robot_simulation/models/tree_type1/: model.config  model.sdf
robot_simulation/models/tree_type2/: model.config  model.sdf
robot_simulation/models/tree_type2/materials/scripts/: tree_type2.material
robot_simulation/models/tree_type2/meshes/: model.dae  model.stl
robot_simulation/models/tree_type3/: model.config  model.sdf
robot_simulation/models/tree_type3/materials/scripts/: tree_type3.material
robot_simulation/models/tree_type3/meshes/: model.dae  model.stl
robot_simulation/worlds/: aua_field1.world  corn_field.world  corn_field1.world  corn_field_barriers.world  corn_field_simple.world  gps_test.world  office.world  office_sim.world  test.world
sirius/: CMakeLists.txt  README.md  package.xml
sirius/config/: gazebo_ros_control_params.yaml  gps_localization.yaml  laser_filter.yaml  localization.yaml  my_config.yaml  twist_mux.yaml
sirius/config/navigation/: base_local_planner_params.yaml  costmap_common.yaml  costmap_global.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  move_base_params.yaml  planner.yaml
sirius/include/: my_husky.hpp  sirius.hpp
sirius/launch/: empty_world_map.launch  gps_navigation.launch  indoor_nav.launch  lidar.launch  safety.launch  sirius_control.launch  sirius_empty_world.launch  sirius_gps_loc.launch  sirius_localization.launch  sirius_map_localisation.launch  spawn_sirius.launch  waypoint_nav.launch
sirius/launch/include/: laser.launch  navsat.launch
sirius/launch/localisation/: sirius_map_localisation.launch
sirius/launch/navigation/: empty_world_map.launch  gmapping.launch  move_base.launch
sirius/launch/simulation/: sirius_empty_world.launch  sirius_gps_simulation.launch
sirius/launch/startup/: startup_nodes.launch
sirius/scripts/: failsafe.py  gps.py
sirius/src/: emergency_node.cpp  functions.cpp  gps_planer.cpp  safety.cpp  simple_planer.cpp
sirius/urdf/: sirius_description.urdf  sirius_description.urdf.xacro
sirius/urdf/meshes/: mid_rround.STL  mid_square.STL  sidestands_v2.STL
sirius_navigation/: CMakeLists.txt  package.xml
sirius_navigation/config/: README.md  collector.yaml  costmap_common.yaml  costmap_global_static.yaml  plan_config.yaml  planner.yaml
sirius_navigation/include/: sirius_navigation.hpp
sirius_navigation/launch/: README.md  collect_gps_waypoints.launch  indoor_nav.launch  outdoor_nav.launch  planning.launch  waypoint_nav.launch
sirius_navigation/launch/indoor/: collect_waypoints.launch  indoor_nav.launch
sirius_navigation/launch/maps/: office_world_map.launch
sirius_navigation/launch/navigation/: amcl.launch  corn_amcl.launch  gmapping.launch  move_base.launch  move_base_legacy.launch
sirius_navigation/launch/rosbags/: gps_evaluation.launch  rosbag_play.launch
sirius_navigation/maps/: aua_field2.pgm  aua_field2.yaml  corn_field_barriers_map.yaml  corn_field_map.yaml  empty_map.yaml  office.yaml  office_corridor.yaml  office_sim.yaml  test_field_map.pgm  test_field_map.yaml  test_map2.pgm  test_map2.yaml
sirius_navigation/scripts/: gps_accuracy_test.py
sirius_navigation/scripts/visualisation_utils/: draw_fix.py
sirius_navigation/src/: collect_gps_waypoints.cpp  collect_waypoints.cpp  functions.cpp  gps_planer.cpp  gps_planner_2.cpp  gps_planner_3.cpp  half_rotation.cpp  keyboard.cpp  map_coords_planner.cpp  simple_planer.cpp
sirius_navigation/txt_files/: navsat_fix.txt  navsat_map.txt
sirius_navigation/waypoint_files/: field_gps_waypoints1.txt  field_gps_waypoints_final.txt  field_gps_waypoints_final2.txt  gps_waypoints.txt  gps_waypoints_no_map_7-7-20.txt  sim_gps_waypoints.txt  sim_map_waypoints.txt  simulation_gps_waypoints.txt  simulation_gps_waypoints2.txt  test_field_gps_waypoints1.txt  test_gps_waypoints.txt  test_planner_3.txt
